# python-invoke-depends

./: LICENSE  README.md  pyproject.toml
src/invoke_depends/: __init__.py  arg_templates.py  fingerprint.py  mod.py  path_mtime.py  typing.py
tests/: test_invoke_depends.py
